docs: CSS overload
changed many HTML elements into classes that can be adjusted from the CSS main page. Looking gooooood!

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -26,38 +26,55 @@
     </ul>
 </nav>
 
+<!--Get to Know the Artist-->
 
-<h2> Rachel Payette </h2>
-<p>
-    I am an artist inspired by Art Nouveau and neo-traditional 
-    styles, drawing influence from artists like Danvillablanca,
-     Loish, Kellogsloops, and Vitaly Morozov. 
-     Working primarily with alcohol markers and ink, 
-     I am now expanding into the digital art space. 
-     Typically, I specialize in character drawings and portraits.
-     <br> 
-     I have been passionate about art since childhood, 
-     always drawn to capturing people, characters, 
-     and mythical creatures. 
-     Heavily influenced by instrumental music and the simple magic of daily kindness from others,
-      my work aims to give form to emotions and feelings,
-     creating a visual representation of the human experience.
+<section class="overlay-section">
+    <h2>Get to Know the Artist</h2>
+</section>
 
-</p>
-<h2> Thank you for visiting my site. 
-</h2>
-<h3 aria-hidden="true"> 
-    &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 &#127800 &#127989 &#127990 
-    <br>
-    <br>
-    Please feel free to reach out if you have any questions or requests</h3>
+<!--about me-->
+<section class="about-me">
+    <h2>Rachel Payette</h2>
+    <p>
+        I am an artist inspired by <em>Art Nouveau</em> and <em>neo-traditional</em> styles, drawing influence from artists such as <strong>Danvillablanca</strong>, <strong>Loish</strong>, <strong>Kellogsloops</strong>, and <strong>Vitaly Morozov</strong>.
+    </p>
+    <p>
+        Working primarily with <strong>alcohol markers and ink</strong>, I am now expanding into the digital art space. My focus is character drawings and portraits, with a love for capturing the essence of <em>people</em>, <em>characters</em>, and <em>mythical creatures</em>.
+    </p>
+    <p>
+        Art has been my passion since childhood. Influenced deeply by instrumental music and inspired by the beauty of everyday kindness, my goal is to give form to emotions and create a visual experience that resonates with others.
+    </p>
+</section>
+
+
+
+<hr class="styled-hr">
+
+<div class="thank-you">
+    <p>Thank you for visiting my site! I hope you enjoyed exploring my art portfolio. Feel free to reach out if you have any questions or would like to connect.</p>
+</div>
+
 </body>
 
 <hr>
 
 <!--footer-->
+
 <footer>
-    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
-    <p></p>
-  </footer>
+    <div class="footer-content">
+        <!-- Copyright and Attribution -->
+        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+
+        <!-- Social Media Links -->
+        <ul class="social-links">
+            <li><a href="www.instagram.com/rachel_vi_arts/?hl=en" target="_blank" aria-label="Instagram">Instagram</a></li>
+
+            <li><a href="https://www.linkedin.com/in/rachel-vi-payette/" target="_blank" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+
+        <!-- Contact Information -->
+        <p><strong>Contact:</strong> <a href="mailto:rachelvipayette@gmail.com">RachelViPayette@gmail.com</a></p>
+    </div>
+</footer>
+
   </html>
