--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -27,6 +27,15 @@
     </ul>
 </nav>
 
+<!--explore my art-->
+
+<section class="overlay-section">
+    <h2>Explore My Art</h2>
+</section>
+
+
+
+
 <!--Photos of my artwork-->
 
 <section id="collection">
@@ -155,8 +164,20 @@ width="100%"></div>
 </body>
 <!--footer-->
 <footer>
-    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
-    <p></p>
-  </footer>
+    <div class="footer-content">
+        <!-- Copyright and Attribution -->
+        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+
+        <!-- Social Media Links -->
+        <ul class="social-links">
+            <li><a href="www.instagram.com/rachel_vi_arts/?hl=en" target="_blank" aria-label="Instagram">Instagram</a></li>
+
+            <li><a href="https://www.linkedin.com/in/rachel-vi-payette/" target="_blank" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+
+        <!-- Contact Information -->
+        <p><strong>Contact:</strong> <a href="mailto:rachelvipayette@gmail.com">RachelViPayette@gmail.com</a></p>
+    </div>
+</footer>
 
   </html>
