--- a/Pages/process.html
+++ b/Pages/process.html
@@ -27,72 +27,81 @@
     </ul>
 </nav>
 
-<hr>
-   
-    <p> As an artist transitioning from traditional mediums into the digital art world,
-         my creative process is deeply rooted in my experience with alcohol ink and pencil. 
-         These mediums allow me to explore fluidity and precision, giving life to the portraits and character drawings. 
-         While I’ve worked with a variety of tools, I find myself most drawn to classic pencil sketches of the human form.
-          
+<!--Motive & Medium-->
 
-        My artistic style leans toward neotraditional, but I’m on a personal journey to carve out something uniquely mine. 
-        Each piece I create is a reflection of where I am in my artistic growth—an evolving blend of what I know 
-        and what I’m learning.</p>
-   </section>
-
-   <!--inspiration-->
-<h3> Inspiration</h3>
-<p>I'm often inspired by the <strong>music </strong> I’m listening to or by <strong>memories </strong>that resonate with me. Even a simple, 
-    pleasant conversation can ignite my imagination and push me toward the canvas, 
-    whether it’s physical or digital.
-
-</p>
-
-   <!--Mediums-->
-   <section>
-    <h3> Mediums </h3>
-    <p> Of the many mediums I've worked with, 
-        a few have always resonated with me on a deeper level.
-    Namely:</p>
-   
+<section class="overlay-section">
+    <h2>Motive & Medium</h2>
 </section>
-   
-   
-    <!--Mediums list-->
-    <ul> 
-       <li> Alcohol Markers</li>
-       <li> Pencil</li>
-       <li> ink</li>
-       <li> Watercolor</li>
+
+<!--body text-->
+<section class="creative-vision">
+    <hr>
+    <h2>Creative Vision</h2>
+    <p>
+        As an artist transitioning from traditional mediums into the digital art world, my creative process is deeply rooted in my experience with <strong>alcohol ink</strong> and <strong>pencil</strong>. These mediums allow me to explore <em>fluidity</em> and <em>precision</em>, bringing life to portraits and character drawings. Though I work with many tools, I am most drawn to <em>classic pencil sketches of the human form</em>.
+    </p>
+    <p>
+        My artistic style leans towards neotraditional, yet I’m on a personal journey to carve out something uniquely mine. Each piece I create is a reflection of my <strong>artistic growth</strong>—an evolving blend of what I know and what I’m learning.
+    </p>
+</section>
+
+<!-- Inspiration Section -->
+<section class="inspiration">
+    <h3>Inspiration</h3>
+    <p>
+        I’m often inspired by the <strong>music</strong> I listen to and <strong>memories</strong> that resonate. Even a simple conversation can spark my imagination, pushing me to create, whether on canvas or screen.
+    </p>
+</section>
+
+<!-- Mediums Section -->
+<section class="mediums">
+    <h3>Mediums</h3>
+    <p>Some mediums have always resonated with me on a deeper level:</p>
+    <ul>
+        <li>Alcohol Markers</li>
+        <li>Pencil</li>
+        <li>Ink</li>
+        <li>Watercolor</li>
     </ul>
+</section>
 
-<!--process-->
-<h3> Process </h3>
-        <p> My creative process begins with finding inspiration from my daily life, 
-            whether it’s through music, memories, or conversations. 
-            I take mental notes of these moments, 
-            which later fuel my artistic vision. 
-            From there, I break the process into several key steps:</p>
-
-<!--process list-->
-   <ol>
-    <li> Take note whatever inspires me day-to-day </li>
-    <li> create a quick sketch of the concept in my mind </li>
-    <li> find reference photos to map out shadows and refine the details of the sketch </li>
-    <li>  recreate the drawing in a designated sketchbook</li>
-    <li>  test color combinations and explore shading options</li>
-    <li>  choose a style that complements the composition, considering the mood or theme I want to convey</li>
-    <li> complete the piece in the medium and style that best fits, balancing texture, depth, and form </li>
-   </ol>
+<!-- Process Section -->
+<section class="process">
+    <h3>Process</h3>
+    <p>
+        My creative process begins with inspiration from daily life—music, memories, or conversations. From there, I break it down into these steps:
+    </p>
+    <ol>
+        <li>Take note of daily inspirations</li>
+        <li>Create a quick sketch of my concept</li>
+        <li>Find reference photos for shadows and details</li>
+        <li>Refine the drawing in a sketchbook</li>
+        <li>Test colors and explore shading</li>
+        <li>Choose a style to match the theme or mood</li>
+        <li>Complete the piece, balancing texture, depth, and form</li>
+    </ol>
+</section>
 
 </body>
 
 <hr>
 
    <!--footer-->
-<footer>
-    <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
-    <p></p>
-  </footer>
+   <footer>
+    <div class="footer-content">
+        <!-- Copyright and Attribution -->
+        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+
+        <!-- Social Media Links -->
+        <ul class="social-links">
+            <li><a href="www.instagram.com/rachel_vi_arts/?hl=en" target="_blank" aria-label="Instagram">Instagram</a></li>
+
+            <li><a href="https://www.linkedin.com/in/rachel-vi-payette/" target="_blank" aria-label="LinkedIn">LinkedIn</a></li>
+        </ul>
+
+        <!-- Contact Information -->
+        <p><strong>Contact:</strong> <a href="mailto:rachelvipayette@gmail.com">RachelViPayette@gmail.com</a></p>
+    </div>
+</footer>
 
   </html>
