--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ tr:hover {background-color: #c6a9ce;}
     <title>RachelPayette - Artist</title>
     <link rel="icon" type="image/x-icon" href="./Pages/Photo-webpage/favicon.ico"
     >
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Pacifico&display=swap');
+      </style>
+
 </head>
 
 <body>
@@ -78,7 +83,7 @@ tr:hover {background-color: #c6a9ce;}
 <div class="container">
   <!--second section-->
     <section>
-      <div class="slogan">
+      <div class="slogan dancing-script-CustomFont">
     <h2>
 Ink
 <br> & 
@@ -103,11 +108,12 @@ text-align:left;
 background-color:#9A5C94;" 
   >Contact me on</h2>
 
+  
 <table>
     <tr style="color:#000000;text-align: left;">
       <th>Social Media</th>
       <th>Handle</th>
-      <th>Reason</th>
+      <th> &#127800 &#127800 &#127800</th>
     </tr>
     <tr>
       <td>Instagram</td>
@@ -127,6 +133,7 @@ background-color:#9A5C94;"
     </tr>
   </table>
 </section>
+
 </body>
 
 <!--footer-->
