Docs: Final push
Reworking header fonts.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ tr:hover {background-color: #c6a9ce;}
     <title>RachelPayette - Artist</title>
     <link rel="icon" type="image/x-icon" href="./Pages/Photo-webpage/favicon.ico"
     >
+<!--fonts-->
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Pacifico&display=swap');
       </style>
+
 
 </head>
 
