--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about me</title>
+    <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
+    >
  </head>
     
  <body>
