--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Illustrations</title>
+    <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
+    >
  </head>
 
  <body>
