--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -181,5 +181,5 @@ width="100%"></div>
         <p><strong>Contact:</strong> <a href="mailto:rachelvipayette@gmail.com">RachelViPayette@gmail.com</a></p>
     </div>
 </footer>
-
+</body>
   </html>
