docs: Adding JS elements to footer
Current year to footer, then console showing current date. JS is weird...

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -14,6 +14,9 @@
  <link href="../CSS/main.css"
  rel="stylesheet" type="text/css">
 
+  <!-- Link to JS -->
+  <script src="/Javascript/main.js" defer></script>
+
  <!--heading-->
 <header>
     <h1> &#127800 About Me &#127800</h1>  
@@ -65,7 +68,8 @@
 <footer>
     <div class="footer-content">
         <!-- Copyright and Attribution -->
-        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+        <p>&copy; <strong> <span id="current-year"></span> by Rachel Payette.</strong>  Proudly created through Github</p>
+        <p id="full-date"></p>
 
         <!-- Social Media Links -->
         <ul class="social-links">
