--- a/Pages/illustrations.html
+++ b/Pages/illustrations.html
@@ -6,6 +6,9 @@
     <link href="../CSS/main.css"
     rel="stylesheet" type="text/css">
 
+ <!-- Link to JS -->
+ <script src="/Javascript/main.js" defer></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Illustrations</title>
@@ -167,8 +170,9 @@ width="100%"></div>
 <!--footer-->
 <footer>
     <div class="footer-content">
-        <!-- Copyright and Attribution -->
-        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+           <!-- Copyright and Attribution -->
+           <p>&copy; <strong> <span id="current-year"></span> by Rachel Payette.</strong>  Proudly created through Github</p>
+           <p id="full-date"></p>
 
         <!-- Social Media Links -->
         <ul class="social-links">
