--- a/Pages/process.html
+++ b/Pages/process.html
@@ -6,15 +6,20 @@
     <title>Process</title>
     <link rel="icon" type="image/x-icon" href="./Photo-webpage/favicon.ico"
     >
- </head>
- <body>
-    
- 
+
  <!--Link to css-->
  <link href="../CSS/main.css"
  rel="stylesheet" type="text/css">
 
 
+  <!-- Link to JS -->
+  <script src="/Javascript/main.js" defer></script>
+
+
+ </head>
+ <body>
+    
+ 
 <!--About process-->
 <section>
     <header>
@@ -92,7 +97,8 @@
    <footer>
     <div class="footer-content">
         <!-- Copyright and Attribution -->
-        <p>&copy; <strong>2024 by Rachel Payette.</strong>  Proudly created through Github</p>
+        <p>&copy; <strong> <span id="current-year"></span> by Rachel Payette.</strong>  Proudly created through Github</p>
+        <p id="full-date"></p>
 
         <!-- Social Media Links -->
         <ul class="social-links">
