--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@ tr:hover {background-color: #c6a9ce;}
       @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Pacifico&display=swap');
       </style>
 
+ 
+ <!--Link to css-->
+ <link href="./CSS/main.css"
+ rel="stylesheet" type="text/css">
+
+ <!-- Link to JS -->
+ <script src="Javascript/main.js" defer></script>
+
+
 
 </head>
 
@@ -96,10 +105,7 @@ Ink
 
 </section>
 
- 
- <!--Link to css-->
- <link href="./CSS/main.css"
- rel="stylesheet" type="text/css">
+</body>
 
 
 </div>
@@ -141,9 +147,10 @@ background-color:#9A5C94;"
 
 <!--footer-->
 <footer>
-  <p><strong>© 2024 by Rachel Payette.</strong>  Proudly created through Github</p>
-  <p></p>
+  <p>&copy; <span id="current-year"></span> by Rachel Payette. Proudly created through Github</p>
+  <p id="full-date"></p>
 </footer>
+
 
 </body>
 </html>
