js: Time-dependent greetings
added morning, afternoon, night. Fun sentences, chose some colors in CSS that aren't terrible. Hard to have contrast with each other if using set site pallet of violet tones, so went with more traditional color options to represent times of day. Will change later to more pallet-constrained options after assignment is handed in.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ tr:hover {background-color: #c6a9ce;}
     </ul>
 </nav>
 
+<!-- Hello User -->
+<section id="Hello-User">
+  <h2 id="Hello-Message"></h2>
+</section>
+
 
 <!--Image set-->
 <div id="Showcase" id="medusa" >
