docs: JS & CSS - Button
Added fox motif img as button. CSS for transparency and hover. Alert for biting warning (haha)

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -51,7 +51,11 @@
     </p>
 </section>
 
+<!--adding button here-->
+<img id="btn-alert" src="./Photo-webpage/FoxMotif .png" alt="FoxMotif"
+style="cursor: pointer;">
 
+<!--separation-->
 
 <hr class="styled-hr">
 
