--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ tr:hover {background-color: #c6a9ce;}
 
 <!-- Hello User -->
 <section id="Hello-User">
-  <h2 id="Hello-Message"></h2>
+  <h id="Hello-Message"></h2>
 </section>
 
 
