JS: Pathway debug
making github pages link properly

--- a/Pages/process.html
+++ b/Pages/process.html
@@ -13,7 +13,7 @@
 
 
   <!-- Link to JS -->
-  <script src="/Javascript/main.js" defer></script>
+  <script src="../Javascript/main.js" defer></script>
 
 
  </head>
