--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -15,7 +15,7 @@
  rel="stylesheet" type="text/css">
 
   <!-- Link to JS -->
-  <script src="/Javascript/main.js" defer></script>
+  <script src="../Javascript/main.js" defer></script>
 
  <!--heading-->
 <header>
