--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ tr:hover {background-color: #c6a9ce;}
  rel="stylesheet" type="text/css">
 
  <!-- Link to JS -->
- <script src="Javascript/main.js" defer></script>
+ <script src="./Javascript/main.js" defer></script>
 
 
 
