JS: Debugging onload and text
trying to get button and welcome message to do what they're supposed to

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -14,8 +14,8 @@
  <link href="../CSS/main.css"
  rel="stylesheet" type="text/css">
 
-  <!-- Link to JS -->
-  <script src="../Javascript/main.js" defer></script>
+<!-- Link to JS -->
+ <script src="../Javascript/main.js"defer></script>
 
  <!--heading-->
 <header>
@@ -88,6 +88,8 @@ style="cursor: pointer;">
         <!-- Contact Information -->
         <p><strong>Contact:</strong> <a href="mailto:rachelvipayette@gmail.com">RachelViPayette@gmail.com</a></p>
     </div>
+
+</body>
 </footer>
 
   </html>
