Docs: JS CSS HTML hover button
made a warning → danger button above fox on "about me" page.
Used css to adjust placement, used JS for onmouseover and onmouseout effects.

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -51,9 +51,11 @@
     </p>
 </section>
 
-<!--adding button here-->
+<!--adding buttons here-->
 
-
+<button id="textbutton">
+    Warning
+</button>
 
 <img id="btn-alert" src="./Photo-webpage/FoxMotif .png" alt="FoxMotif"
 style="cursor: pointer;">
