Docs: Created additional JS files. Finished OL list objective
figured out that JS doe not work like css and you should have a js sheet for each page that requires it. otherwise, console error galore. lol.
Finished ol list with even/odd.
If all looks good on github pages, this will be the last edit :)

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -15,7 +15,7 @@
  rel="stylesheet" type="text/css">
 
 <!-- Link to JS -->
- <script src="../Javascript/main.js"defer></script>
+ <script src="../Javascript/about-me.js"defer></script>
 
  <!--heading-->
 <header>
