--- a/Pages/process.html
+++ b/Pages/process.html
@@ -13,7 +13,7 @@
 
 
   <!-- Link to JS -->
-  <script src="../Javascript/main.js" defer></script>
+  <script src="../Javascript/process.js" defer></script>
 
 
  </head>
@@ -90,9 +90,16 @@
         <li>Choose a style to match the theme or mood</li>
         <li>Complete the piece, balancing texture, depth, and form</li>
     </ol>
+
+   
 </section>
 
+<section>
+    <ol id="numbers">
 
+    </ol>
+    
+</section>
 
 <hr>
 
