--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ tr:hover {background-color: #c6a9ce;}
 
  <!-- Link to JS -->
  <script src="./Javascript/main.js" defer></script>
-
+<!--I like the "defer" JS link because then the browser loads te JS elements after the HTML aspects are loaded. Or at leat most of the time. I have a bug with the footer I had to make an exception for. But otherwise, I prefer this style of linking the HTML to JS. Also, so I can keep my page links together in one section as my CSS page links are also in the head of each HTML doc. Consistency is key for my organization. -->
 
 
 </head>
